test/integration/bad/lang/bad12.stan
generated quantities {
  beta = 1;
}
